fix(ui5-input): align input's content in center
FIXES: https://github.com/SAP/ui5-webcomponents/issues/5314

--- a/packages/main/src/themes/Input.css
+++ b/packages/main/src/themes/Input.css
@@ -426,8 +426,10 @@
 	box-shadow: var(--_ui5_input_success_icon_box_shadow);
 }
 
-
-
+/* Center content (use case: input height is custom) */
+.ui5-input-content {
+	align-items: center
+}
 
 /* Chrome, Safari, Edge, Opera */
 [inner-input]::-webkit-outer-spin-button,
